# Eye_Protection_Alert

./: CONTRIBUTING.md  README.md  config.example.json  pyproject.toml  requirements.txt
docs/: PROJECT_REPORT.md
eyeguard/: __init__.py  __main__.py  app.py  calibrate.py  config.py  detector.py  gui.py  notifier.py  video_stream.py
tests/: test_config.py  test_detector.py  test_notifier.py
